# lattice

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  main.py  opencode.json  pyproject.toml
.github/workflows/: ci.yml
.tmp/external-context/: .manifest.json
Docs/: PRD.md  agentic_graph_rag_implementation.md  agentic_rag_app_plan.md  critical_repo_review_2026-02-21.md  development_roadmap.md  gap_closure_plan.md  huggingface_spaces_runbook.md  new_app_requirements.md  new_new_app_requirements.md  phase1_working_prototype_local_summary.md  phase2_data_layer_hardening_local_setup.md  phase2_implementation_plan.md  phase3_core_agentic_orchestration_plan.md  phase5_huggingface_spaces_runbook.md  phase5_uat_test_cases.md  prd_implementation_checklist.md  rebuild_cleanup_runbook.md  requirements_traceability.md  step_g_graphrag_regression.md  step_g_graphrag_regression_queries.json
Docs/Agentic_RAG_Architecture/: Agentic_RAG_Summary.md  paper_essance.md
data/eval/: golden_questions.json
data/prototype/: graph_edges.json  private_documents.json
lattice/: __init__.py  chainlit_app.py
lattice/app/: __init__.py
lattice/core/: __init__.py  config.py
lattice/prototype/: __init__.py  auth.py  config.py  data_health.py  models.py  readiness.py  router_agent.py  service.py  synthesizer.py
scripts/: deploy_hf.sh
tests/: conftest.py  test_auth.py  test_chainlit_cold_start.py  test_config.py  test_data_health.py  test_document_retriever.py  test_graph_retriever.py  test_graphrag_embedder.py  test_main_auth.py  test_orchestration_graph.py  test_orchestration_routing.py  test_orchestration_telemetry.py  test_prototype_service.py  test_readiness.py  test_router_agent.py  test_synthesizer.py
tests/e2e/: README.md
(+77 files in other folders)
