[project]
name = "lattice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "langgraph>=0.6.8",
    "neo4j>=6.0.2",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "uvicorn>=0.37.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: marks tests that require live external services",
]
